# fastapi

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
app/adapters/: gemini.py  jsearch.py
app/agents/: base.py  jobs.py
app/api/v1/: health.py  jobs.py  router.py
app/core/: config.py  logging.py
app/models/: schemas.py
tests/adapters/: test_sum.py
tests/api/: test_health.py
