[project]
name = "fastapi-study"
version = "0.1.0"
description = "FastAPI study project with Clean Architecture"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "pydantic-settings",
    "google-genai",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
